--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
     "author": "Timothee Viard <timothee.viardtv@gmail.com>",
     "devDependencies": {
         "typescript": "4.9.5"
+    },
+    "scripts": {
+        "build": "tsc"
     }
 }
