--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "devDependencies": {
         "typescript": "4.9.5"
     },
+    "main": "src/index.js",
     "scripts": {
         "build": "tsc"
-    }
+    },
+    "type": "module",
+    "version": "0.0.1"
 }
