--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "author": "Timothee Viard <timothee.viardtv@gmail.com>",
-  "devDependencies": {
-    "prettier": "2.8.4",
-    "typescript": "4.9.5"
-  },
-  "main": "src/index.js",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write ."
-  },
-  "type": "module",
-  "version": "0.0.1"
+	"author": "Timothee Viard <timothee.viardtv@gmail.com>",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
+		"eslint": "^8.34.0",
+		"prettier": "2.8.4",
+		"typescript": "^4.9.5"
+	},
+	"main": "src/index.js",
+	"scripts": {
+		"build": "tsc",
+		"format": "prettier --write .",
+		"lint": "eslint . --max-warnings 0 --report-unused-disable-directives",
+		"lint:fix": "npm run lint -- --fix"
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
